--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       Drag the button below to your bookmarks bar to install X-Ray Goggles.
     </p>
     
-    <a class="goggles-bookmark" href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.glitch.me/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.glitch.me');document.body.appendChild(script);}())"><span class="dragme fa fa-arrows"></span><span class="label">X-Ray Goggles</span></a>
+    <a class="goggles-bookmark" href="javascript:(function () {var script=document.createElement('script');script.src='https://vast-refuge-85958.herokuapp.com/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://vast-refuge-85958.herokuapp.com');document.body.appendChild(script);}())"><span class="dragme fa fa-arrows"></span><span class="label">X-Ray Goggles</span></a>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
