🌋🌄 Checkpoint ./public/index.html:217543/1858 ./public/style.css:217543/8

--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,15 @@
           <a class="goggles-bookmark" href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.glitch.me/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.glitch.me');document.body.appendChild(script);}())"><span class="dragme fa fa-arrows"></span><span class="label">X-Ray Goggles</span></a>
 
         </li>
+        
+        <li>
+          <h3>
+            Saving Your Work
+          </h3>
+          <p>
+            To save your work with this version of X-Ray Goggles we recommend taking a screenshot of the remixed web page.
+          </p>
+        </li>
       </ol>
     </div>
     
