🐦🌉 Checkpoint ./public/index.html:217543/53

--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
       </h3>
       
       <p>
-        X-Ray Goggles was developed by <a href="https://www.mozilla.org" target="blank">Mozilla</a>. This version was created by <a href="https://mouse.org/" target="blank">Mouse</a> adapted from the Mozilla version. This version does not support saving and publishing web page remixes, but we recommend taking a screenshot of the remixed page to show your work.
+        X-Ray Goggles was developed by <a href="https://foundation.mozilla.org" target="blank">Mozilla</a>. This version was created by <a href="https://mouse.org/" target="blank">Mouse</a> adapted from the Mozilla version. This version does not support saving and publishing web page remixes, but we recommend taking a screenshot of the remixed page to show your work.
       </p>
       
       <p>
