--- a/public/en-US/easy-remix-dialog/index.html
+++ b/public/en-US/easy-remix-dialog/index.html
@@ -3,33 +3,33 @@
 <html lang="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://goggles.mozilla.org/bower/makerstrap/dist/makerstrap.min.css">
+    <link rel="stylesheet" href="public/bower/makerstrap/dist/makerstrap.min.css">
 
-    <link rel="stylesheet" href="https://goggles.mozilla.org/stylesheets/style.css">
-    <link rel="stylesheet" href="https://goggles.mozilla.org/stylesheets/dialog.css">
-    <link rel="stylesheet" href="https://goggles.mozilla.org/stylesheets/hierarchic-source-code.css">
-    <link rel="stylesheet" id="webxray" href="https://goggles.mozilla.org/webxray.css">
-    <link rel="stylesheet" href="https://goggles.mozilla.org/tipsy.css">
-    <link rel="stylesheet" href="https://goggles.mozilla.org/codemirror2/lib/codemirror.css">
-    <link rel="stylesheet" href="https://goggles.mozilla.org/stylesheets/jsbin-codemirror-theme.css">
-    <link rel="stylesheet" href="https://goggles.mozilla.org/stylesheets/easy-dialog-remix.css">
+    <link rel="stylesheet" href="public/stylesheets/style.css">
+    <link rel="stylesheet" href="public/stylesheets/dialog.css">
+    <link rel="stylesheet" href="public/stylesheets/hierarchic-source-code.css">
+    <link rel="stylesheet" id="webxray" href="public/webxray.css">
+    <link rel="stylesheet" href="public/tipsy.css">
+    <link rel="stylesheet" href="public/codemirror2/lib/codemirror.css">
+    <link rel="stylesheet" href="public/stylesheets/jsbin-codemirror-theme.css">
+    <link rel="stylesheet" href="public/stylesheets/easy-dialog-remix.css">
 
     <title>Remix Dialog</title>
-    <script src="https://goggles.mozilla.org/jquery.min.js"></script>
-    <script src="https://goggles.mozilla.org/jquery.tipsy.js"></script>
-    <script src="https://goggles.mozilla.org/jquery.scrollTo-min.js"></script>
-    <script src="https://goggles.mozilla.org/codemirror2/lib/codemirror.js"></script>
-    <script src="https://goggles.mozilla.org/codemirror2/mode/xml/xml.js"></script>
-    <script src="https://goggles.mozilla.org/codemirror2/mode/javascript/javascript.js"></script>
-    <script src="https://goggles.mozilla.org/codemirror2/mode/css/css.js"></script>
-    <script src="https://goggles.mozilla.org/codemirror2/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="https://goggles.mozilla.org/easy-remix-dialog/render-dom.js"></script>
-    <script src="https://goggles.mozilla.org/easy-remix-dialog/edit-dom.js"></script>
-    <script src="https://goggles.mozilla.org/easy-remix-dialog/html-editor.js"></script>
-    <script src="https://goggles.mozilla.org/src/utils.js"></script>
-    <script src="https://goggles.mozilla.org/src/tag-colors.js"></script>
-    <script src="https://goggles.mozilla.org/src/event-emitter.js"></script>
-    <script src="https://goggles.mozilla.org/bower/webmaker-i18n/localized.js"></script>
+    <script src="public/jquery.min.js"></script>
+    <script src="public/jquery.tipsy.js"></script>
+    <script src="public/jquery.scrollTo-min.js"></script>
+    <script src="public/codemirror2/lib/codemirror.js"></script>
+    <script src="public/codemirror2/mode/xml/xml.js"></script>
+    <script src="public/codemirror2/mode/javascript/javascript.js"></script>
+    <script src="public/codemirror2/mode/css/css.js"></script>
+    <script src="public/codemirror2/mode/htmlmixed/htmlmixed.js"></script>
+    <script src="public/easy-remix-dialog/render-dom.js"></script>
+    <script src="public/easy-remix-dialog/edit-dom.js"></script>
+    <script src="public/easy-remix-dialog/html-editor.js"></script>
+    <script src="public/src/utils.js"></script>
+    <script src="public/src/tag-colors.js"></script>
+    <script src="public/src/event-emitter.js"></script>
+    <script src="public/bower/webmaker-i18n/localized.js"></script>
 
     <style>
       iframe {
@@ -74,7 +74,7 @@
 
     </div>
 
-    <script src="https://goggles.mozilla.org/easy-remix-dialog.js"></script>
+    <script src="public/easy-remix-dialog.js"></script>
   </body>
 </html>
 
