--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/e4d2dd21-5cbc-4d94-912b-2920d335738d%2Fdark-sunglasses_1f576.png?v=1571336197561" />
+    
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="" />
   </head>  
   <body>
     <div id="header">  
       <div id="header-content">     
-        <!--
         <img
           src=""
           alt="X-Ray Goggles Logo"
           id="header-logo"
-        >-->
+        >
         <h1>X-Ray Goggles</h1>
       </div>
     </div>
