--- a/public/en-US/easy-remix-dialog/index.html
+++ b/public/en-US/easy-remix-dialog/index.html
@@ -3,33 +3,33 @@
 <html lang="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="bower/makerstrap/dist/makerstrap.min.css">
+    <link rel="stylesheet" href="/bower/makerstrap/dist/makerstrap.min.css">
 
-    <link rel="stylesheet" href="stylesheets/style.css">
-    <link rel="stylesheet" href="stylesheets/dialog.css">
-    <link rel="stylesheet" href="stylesheets/hierarchic-source-code.css">
-    <link rel="stylesheet" id="webxray" href="webxray.css">
-    <link rel="stylesheet" href="tipsy.css">
-    <link rel="stylesheet" href="codemirror2/lib/codemirror.css">
-    <link rel="stylesheet" href="stylesheets/jsbin-codemirror-theme.css">
-    <link rel="stylesheet" href="stylesheets/easy-dialog-remix.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/dialog.css">
+    <link rel="stylesheet" href="/stylesheets/hierarchic-source-code.css">
+    <link rel="stylesheet" id="webxray" href="/webxray.css">
+    <link rel="stylesheet" href="/tipsy.css">
+    <link rel="stylesheet" href="/codemirror2/lib/codemirror.css">
+    <link rel="stylesheet" href="/stylesheets/jsbin-codemirror-theme.css">
+    <link rel="stylesheet" href="/stylesheets/easy-dialog-remix.css">
 
     <title>Remix Dialog</title>
-    <script src="jquery.min.js"></script>
-    <script src="jquery.tipsy.js"></script>
-    <script src="jquery.scrollTo-min.js"></script>
-    <script src="codemirror2/lib/codemirror.js"></script>
-    <script src="codemirror2/mode/xml/xml.js"></script>
-    <script src="codemirror2/mode/javascript/javascript.js"></script>
-    <script src="codemirror2/mode/css/css.js"></script>
-    <script src="codemirror2/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="easy-remix-dialog/render-dom.js"></script>
-    <script src="easy-remix-dialog/edit-dom.js"></script>
-    <script src="easy-remix-dialog/html-editor.js"></script>
-    <script src="src/utils.js"></script>
-    <script src="src/tag-colors.js"></script>
-    <script src="src/event-emitter.js"></script>
-    <script src="bower/webmaker-i18n/localized.js"></script>
+    <script src="/jquery.min.js"></script>
+    <script src="/jquery.tipsy.js"></script>
+    <script src="/jquery.scrollTo-min.js"></script>
+    <script src="/codemirror2/lib/codemirror.js"></script>
+    <script src="/codemirror2/mode/xml/xml.js"></script>
+    <script src="/codemirror2/mode/javascript/javascript.js"></script>
+    <script src="/codemirror2/mode/css/css.js"></script>
+    <script src="/codemirror2/mode/htmlmixed/htmlmixed.js"></script>
+    <script src="/easy-remix-dialog/render-dom.js"></script>
+    <script src="/easy-remix-dialog/edit-dom.js"></script>
+    <script src="/easy-remix-dialog/html-editor.js"></script>
+    <script src="/src/utils.js"></script>
+    <script src="/src/tag-colors.js"></script>
+    <script src="/src/event-emitter.js"></script>
+    <script src="/bower/webmaker-i18n/localized.js"></script>
 
     <style>
       iframe {
@@ -74,7 +74,7 @@
 
     </div>
 
-    <script src="easy-remix-dialog.js"></script>
+    <script src="/easy-remix-dialog.js"></script>
   </body>
 </html>
 
