--- a/en-US/easy-remix-dialog/index.html
+++ b/en-US/easy-remix-dialog/index.html
@@ -3,33 +3,33 @@
 <html lang="en-US" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/bower/makerstrap/dist/makerstrap.min.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/bower/makerstrap/dist/makerstrap.min.css">
 
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/stylesheets/style.css">
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/stylesheets/dialog.css">
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/stylesheets/hierarchic-source-code.css">
-    <link rel="stylesheet" id="webxray" href="https://x-ray-goggles.glitch.me/webxray.css">
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/tipsy.css">
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/codemirror2/lib/codemirror.css">
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/stylesheets/jsbin-codemirror-theme.css">
-    <link rel="stylesheet" href="https://x-ray-goggles.glitch.me/stylesheets/easy-dialog-remix.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/stylesheets/style.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/stylesheets/dialog.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/stylesheets/hierarchic-source-code.css">
+    <link rel="stylesheet" id="webxray" href="https://mouse-org.github.io/webxray.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/tipsy.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/codemirror2/lib/codemirror.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/stylesheets/jsbin-codemirror-theme.css">
+    <link rel="stylesheet" href="https://mouse-org.github.io/stylesheets/easy-dialog-remix.css">
 
     <title>Remix Dialog</title>
-    <script src="https://x-ray-goggles.glitch.me/jquery.min.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/jquery.tipsy.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/jquery.scrollTo-min.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/codemirror2/lib/codemirror.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/codemirror2/mode/xml/xml.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/codemirror2/mode/javascript/javascript.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/codemirror2/mode/css/css.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/codemirror2/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/easy-remix-dialog/render-dom.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/easy-remix-dialog/edit-dom.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/easy-remix-dialog/html-editor.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/src/utils.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/src/tag-colors.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/src/event-emitter.js"></script>
-    <script src="https://x-ray-goggles.glitch.me/bower/webmaker-i18n/localized.js"></script>
+    <script src="https://mouse-org.github.io/jquery.min.js"></script>
+    <script src="https://mouse-org.github.io/jquery.tipsy.js"></script>
+    <script src="https://mouse-org.github.io/jquery.scrollTo-min.js"></script>
+    <script src="https://mouse-org.github.io/codemirror2/lib/codemirror.js"></script>
+    <script src="https://mouse-org.github.io/codemirror2/mode/xml/xml.js"></script>
+    <script src="https://mouse-org.github.io/codemirror2/mode/javascript/javascript.js"></script>
+    <script src="https://mouse-org.github.io/codemirror2/mode/css/css.js"></script>
+    <script src="https://mouse-org.github.io/codemirror2/mode/htmlmixed/htmlmixed.js"></script>
+    <script src="https://mouse-org.github.io/easy-remix-dialog/render-dom.js"></script>
+    <script src="https://mouse-org.github.io/easy-remix-dialog/edit-dom.js"></script>
+    <script src="https://mouse-org.github.io/easy-remix-dialog/html-editor.js"></script>
+    <script src="https://mouse-org.github.io/src/utils.js"></script>
+    <script src="https://mouse-org.github.io/src/tag-colors.js"></script>
+    <script src="https://mouse-org.github.io/src/event-emitter.js"></script>
+    <script src="https://mouse-org.github.io/bower/webmaker-i18n/localized.js"></script>
 
     <style>
       iframe {
@@ -84,7 +84,7 @@
 
     </div>
 
-    <script src="https://x-ray-goggles.glitch.me/easy-remix-dialog.js"></script>
+    <script src="https://mouse-org.github.io/easy-remix-dialog.js"></script>
   </body>
 </html>
 
