--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             Click and drag this button to your bookmark toolbar to install X-Ray Goggles.
           </p>
 
-          <a class="goggles-bookmark" href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.glitch.me/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.glitch.me');document.body.appendChild(script);}())"><span class="dragme fa fa-arrows"></span><span class="label">X-Ray Goggles</span></a>
+          <a class="goggles-bookmark" href="javascript:(function () {var script=document.createElement('script');script.src='https://mouse-org.github.io/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://mouse-org.github.io');document.body.appendChild(script);}())"><span class="dragme fa fa-arrows"></span><span class="label">X-Ray Goggles</span></a>
 
         </li>
         
