re-add script.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       gtag('config', 'UA-156156635-1');
     </script>
-
+    <script src="/script.js"></script>
   </head>  
   <body>
     <div id="header">  
