--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             Saving Your Work
           </h3>
           <p>
-            To save your work with this version of X-Ray Goggles we recommend taking a screenshot of the remixed web page.
+            To save your work we recommend taking a screenshot of the remixed web page.
           </p>
         </li>
       </ol>
