--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" href="" />
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156156635-1"></script>
     <script>
@@ -18,6 +19,8 @@
 
       gtag('config', 'UA-156156635-1');
     </script>
+
+
     <script src="/script.js"></script>
   </head>  
   <body>
@@ -98,7 +101,7 @@
 
         <li>
           <h3>
-            Install Goggles
+            Install X-Ray Goggles
           </h3>
           <img
             id="image2"
